--- a/byteNoiseReductionCPP/byteNoiseReductionCPP.vcxproj.filters
+++ b/byteNoiseReductionCPP/byteNoiseReductionCPP.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="NoiseRemoval.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Algorithms.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Pixel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="NoiseRemoval.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Algorithms.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
